# Test-Task-Service-with-ClickHouse

./: .gitignore  README.md
assignment/: pyproject.toml
assignment/first/: di.py  main.py
assignment_1/: pyproject.toml
assignment_1/pool_di_api/: di.py  interfaces.py  main.py  psql_pool.py
assignment_2_3/: pyproject.toml
assignment_2_3/github_parsing/: entities.py  github_client.py  main.py  parse_settings.py  serializers.py
